added my name to index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
         </div>
       </div>
 
+      <div class="card" onclick="openPage('pages/002_example.html')">
+        <div class="card__text">
+          <div class="card__message">Hello!</div>
+          <div class="card__name">Alexia Penney</div>
+        </div>
+      </div>
+
       <!-- 
         Add your card below, similar to other cards.
         It can be a picture or just text. 
