--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         </div>
       </div>
 
+      <div class="card">
+        <img class="card__img" src="https://pethelpful.com/.image/w_1920,q_auto:good,c_limit/NDowMDAwMDAwMDAwMTA5OTM4/a-corgi-puppy-running.jpg" alt="corgi image"/>
+        <div class="card__text">
+          <div class="card__message">Hello!</div>
+          <div class="card__name">Dina</div>
+        </div>
+      </div>
+
       <!-- 
         Add your card below, similar to other cards.
         It can be a picture or just text. 
