--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card" onclick="openPage('pages/003_dina.html')">
         <img class="card__img" src="https://pethelpful.com/.image/w_1920,q_auto:good,c_limit/NDowMDAwMDAwMDAwMTA5OTM4/a-corgi-puppy-running.jpg" alt="corgi image"/>
         <div class="card__text">
           <div class="card__message">Hello!</div>
