--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
           <div class="card__name">Dina</div>
         </div>
       </div>
+      <div class="card" onclick="openPage('pages/004_luke.html')">
+        <img class="card__img" src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/16:9/w_1280,c_limit/Monkey-Selfie.jpg" alt="corgi image"/>
+        <div class="card__text">
+          <div class="card__message">Hello!</div>
+          <div class="card__name">Luke</div>
+        </div>
+      </div>
 
       <!-- 
         Add your card below, similar to other cards.
