Edit_Card_Aaron

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
       </div>
 
+
       <div class="card" onclick="openPage('pages/003_dina.html')">
         <img class="card__img" src="https://pethelpful.com/.image/w_1920,q_auto:good,c_limit/NDowMDAwMDAwMDAwMTA5OTM4/a-corgi-puppy-running.jpg" alt="corgi image"/>
         <div class="card__text">
@@ -68,6 +69,14 @@
         <div class="card__text">
           <div class="card__message">Hello!</div>
           <div class="card__name">Luke</div>
+        </div>
+      </div>
+
+       <div class="card" onclick="openPage('pages/005_aaron.html')">
+        <img class="card__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyYYqt10CcQGcNzCDJwTFB37s6rloLlIBdFw&s">
+        <div class="card__text">
+          <div class="card__message">Hi There</div>
+          <div class="card__name">Aaron Weddle</div>
         </div>
       </div>
 
