Change_text_color

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
        <div class="card" onclick="openPage('pages/005_aaron.html')">
         <img class="card__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyYYqt10CcQGcNzCDJwTFB37s6rloLlIBdFw&s">
-        <div class="card__text">
+        <div class="card__text card__text--white">
           <div class="card__message">Hi There</div>
           <div class="card__name">Aaron Weddle</div>
         </div>
