--- a/pages/005_aaron.html
+++ b/pages/005_aaron.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Welcome to Aaron's Page!</h1>
 
-<img class="img_01" src="https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fwww.dreamstime.com%2Fillustration%2Fimgur.html&ved=0CBYQjRxqFwoTCLjtgqWam5IDFQAAAAAdAAAAABAH&opi=89978449">
+<img class="img_01" src="https://i.pinimg.com/474x/93/81/be/9381be90f864be1090487f780f308be8.jpg">
 
 <p>Filler text for now (or forever)</p>
 
